Hice del HTML un post de un dato de una tortuga

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <main>
-        <H1>Este es el Blog Post</H1>
-        <p>Este es el parrafo de inicio</p>
+
+        <div class="contenedor-post">
+            <H1>¿Sabías que las Tortugas Marinas Tienen oídos invisibles</H1> 
+
+            <div class="alineadorelementos">
+                <article>
+                    No son visibles externamente pues son órganos primitivos que están cubiertos por una capa de piel. Los estudios que se han realizado indican que ellas oyen mejor en frecuencias bajas, como por ejemplo el ruido de las olas rompiendo en la playa.
+                </article>
+                <img src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dG9ydHVnYSUyMGRlJTIwbWFyfGVufDB8fDB8fHww&w=1000&q=80" alt="Imagen-Tortuga-Marina">
+
+            </div>
+        </div>
+
     </main>
 </body>
 </html>
