--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,10 @@
     <title>BlogPost</title>
 </head>
 <body>
+    <head>
+        Cabecera
+    </head>
+
     <main>
 
         <div class="contenedor-post">
