Hice un encabezado

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <head>
-        Cabecera
+        <section class="barra-superior">
+            
+            <div class="logo">
+                <h2 class="text-logo">Animals</h2>
+                <img src="./Multimedia/Tortuga.png" alt="">
+            </div>
+            <ul class="texto-de-la-barra">
+                <li ><a class="tex-list-barra" href="#">Inicio</a></li>
+                <li ><a class="tex-list-barra" href="#">Mas Informacion</a></li>
+                <li ><a class="tex-list-barra" href="#">Sobre Nosostros</a></li>
+            </ul>
+
+        </section>
     </head>
 
     <main>
