Se agrego una pestaña inferior al post

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <main>
 
-        <div class="contenedor-post">
+        <section class="contenedor-post">
             <H1>¿Sabías que las Tortugas Marinas Tienen oídos invisibles</H1> 
 
             <div class="alineadorelementos">
@@ -19,7 +19,10 @@
                 <img src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dG9ydHVnYSUyMGRlJTIwbWFyfGVufDB8fDB8fHww&w=1000&q=80" alt="Imagen-Tortuga-Marina">
 
             </div>
-        </div>
+
+            <div class="caminito-Tortugas">Para mas informacion visitar la web</div>
+
+        </section>
 
     </main>
 </body>
