Modifique la linea 18 - 20 de HTML, y 02 de CSS

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,9 +15,9 @@
                 <img src="./Multimedia/Tortuga.png" alt="">
             </div>
             <ul class="texto-de-la-barra">
-                <li ><a class="tex-list-barra" href="#">Inicio</a></li>
-                <li ><a class="tex-list-barra" href="#">Mas Informacion</a></li>
-                <li ><a class="tex-list-barra" href="#">Sobre Nosostros</a></li>
+                <li ><a class="tex-list-barra" href="#">Home</a></li>
+                <li ><a class="tex-list-barra" href="#">More information</a></li>
+                <li ><a class="tex-list-barra" href="#">About us</a></li>
             </ul>
 
         </section>
