Agregue un caminito de tortugas donde decia que buscara mas informacion

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,9 +15,9 @@
                 <img src="./Multimedia/Tortuga.png" alt="">
             </div>
             <ul class="texto-de-la-barra">
-                <li ><a class="tex-list-barra" href="#">Inicio</a></li>
-                <li ><a class="tex-list-barra" href="#">Mas Informacion</a></li>
-                <li ><a class="tex-list-barra" href="#">Sobre Nosostros</a></li>
+                <li ><a class="tex-list-barra" href="#">Pagina Principal</a></li>
+                <li ><a class="tex-list-barra" href="#">Informacion</a></li>
+                <li ><a class="tex-list-barra" href="#">Nosostros</a></li>
             </ul>
 
         </section>
@@ -36,7 +36,33 @@
 
             </div>
 
-            <div class="caminito-Tortugas">Para mas informacion visitar la web</div>
+            <figure class="caminito-Tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+            </figure>
 
         </section>
 
