--- a/blogpost.html
+++ b/blogpost.html
@@ -26,7 +26,7 @@
     <main>
 
         <section class="contenedor-post">
-            <H1>¿Sabías que las Tortugas Marinas Tienen oídos invisibles?</H1> 
+            <H1>¡Los oídos invisibles de las tortugas marinas!</H1> 
 
             <div class="alineadorelementos">
                 <article>
