Cambios en el color de fondos y otros pequeños detalles de visualizacion

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,8 +26,10 @@
     <main>
 
         <section class="contenedor-post">
-            <H1>¡Los oídos invisibles de las tortugas marinas!</H1> 
-
+            <div class="contenedor-encabezado-post">
+                <img src="./img/JCP sin fondo.png" alt="Logo de la empresa">
+                <H1>¡Los oídos invisibles de las tortugas marinas!</H1> 
+            </div>
             <div class="alineadorelementos">
                 <article>
                     No son visibles externamente pues son órganos primitivos que están cubiertos por una capa de piel. Los estudios que se han realizado indican que ellas oyen mejor en frecuencias bajas, como por ejemplo el ruido de las olas rompiendo en la playa.
@@ -37,9 +39,6 @@
             </div>
 
             <figure class="caminito-Tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
                 <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
                 <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
                 <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
