--- a/blogpost.html
+++ b/blogpost.html
@@ -25,47 +25,101 @@
 
     <main>
 
-        <section class="contenedor-post">
-            <H1>¡Los oídos invisibles de las tortugas marinas!</H1> 
+        <section class="postNumber">
+            <section class="contenedor-post">
+                <H1>¡Los oídos invisibles de las tortugas marinas!</H1> 
 
-            <div class="alineadorelementos">
-                <article>
-                    No son visibles externamente pues son órganos primitivos que están cubiertos por una capa de piel. Los estudios que se han realizado indican que ellas oyen mejor en frecuencias bajas, como por ejemplo el ruido de las olas rompiendo en la playa.
-                </article>
-                <img src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dG9ydHVnYSUyMGRlJTIwbWFyfGVufDB8fDB8fHww&w=1000&q=80" alt="Imagen-Tortuga-Marina">
+                <div class="alineadorelementos">
+                    <article>
+                        No son visibles externamente pues son órganos primitivos que están cubiertos por una capa de piel. Los estudios que se han realizado indican que ellas oyen mejor en frecuencias bajas, como por ejemplo el ruido de las olas rompiendo en la playa.
+                    </article>
+                    <img src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dG9ydHVnYSUyMGRlJTIwbWFyfGVufDB8fDB8fHww&w=1000&q=80" alt="Imagen-Tortuga-Marina">
 
-            </div>
+                </div>
 
-            <figure class="caminito-Tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-                <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
-            </figure>
+                <figure class="caminito-Tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                </figure>
 
+            </section>
         </section>
 
+
+
+        <section class="postNumber">
+            <section class="contenedor-post">
+                <H1>¿Sabías que hay tortugas marinas de más de 2 metros de largo?</H1> 
+
+                <div class="alineadorelementos">
+                    <article>
+                        Existen especies gigantes de tortugas marinas, como la tortuga laúd, que puede pesar más de 900 kg y medir más de 2 metros
+                    </article>
+                    <img src= "./laud.webp" alt="Imagen-Tortuga-Marina">
+
+                </div>
+
+                <figure class="caminito-Tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                    <img src="./Multimedia/Tortuga.png" alt="Camino de tortugas">
+                </figure>
+
+            </section>
+        </section>
     </main>
+
+
+    <footer>
+        <h3>JCP</h3>
+        <article>Haz llegado al final de la pagina, estate atento a las proximas actualizaciones que vendran en esta pagina.</article>
+
+        <h3>¡Protejamos a las tortugas marinas!</h3>
+    </footer>
 </body>
 </html>
