cambios arregladoe en el texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -119,7 +119,7 @@
 
     <footer>
         <h3>JCP</h3>
-        <article>Haz llegado al final de la pagina, estate atento a las proximas actualizaciones que vendran en esta pagina.</article>
+        <article>Haz llegado al final de la página, estate atento a las próximas actualizaciones que vendrán en esta pagina.</article>
 
         <h3>¡Protejamos a las tortugas marinas!</h3>
     </footer>
